# backend_cs

./: .gitignore  comparison.py  pyproject.toml  requirements.txt  transformations.py
app/: __init__.py  dependencies.py  main.py
app/api/routes/: reports.py
app/core/: config.py
app/schemas/: reports.py
app/services/: comparison.py  excel_utils.py  pdf_parser.py  secondary_transformation.py  transformation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_comparison.py  test_fuzzy_sheet_matching.py  test_pdf_parser.py  test_transformation.py
